--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,8 @@
     <div class="container">
       <section class="user-block">
         <form class="search-form" action="url" method="get">
-          <input type="search" name="search-field" placeholder="Поиск по сайту"><button type="submit" name="search">Найти</button>
+          <input type="search" name="search-field" placeholder="Поиск по сайту">
+          <button type="submit" name="search">Найти</button>
         </form>
         <p><a class="user-profile" href="#">Валентин Петухов</a> <a class="logout" href="#">Выйти</a></p>
         <p class="cart-section">
