Дополнения по стилизации

--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
       </ul>
     </div>
   </section>
-  <section class="container partners">
-    <h2 class="visually-hidden">Партнёры</h2>
-    <a href="https://www.dji.com/" target="_blank"><img src="img/logo-1.jpg" width="260" height="100" alt="DJI"></a>
-    <a href="http://www.sp-gadgets.com/en/" target="_blank"><img src="img/logo-2.jpg" width="260" height="100" alt="SP Gadgets"></a>
-    <a href="https://gopro.com/" target="_blank"><img src="img/logo-3.jpg" width="260" height="100" alt="GoPro"></a>
-    <a href="https://www.vive.com/ru/" target="_blank"><img src="img/logo-4.jpg" width="260" height="100" alt="Vive"></a>
+  <section class="container vendors">
+    <h2 class="visually-hidden">Производители</h2>
+    <a href="https://www.dji.com/" target="_blank"><img src="img/logo-1.jpg" width="260" height="100" alt="DJI" target="_blank"></a>
+    <a href="http://www.sp-gadgets.com/en/" target="_blank"><img src="img/logo-2.jpg" width="260" height="100" alt="SP Gadgets" target="_blank"></a>
+    <a href="https://gopro.com/" target="_blank"><img src="img/logo-3.jpg" width="260" height="100" alt="GoPro"target="_blank"></a>
+    <a href="https://www.vive.com/ru/" target="_blank"><img src="img/logo-4.jpg" width="260" height="100" alt="Vive"target="_blank"></a>
   </section>
   <div class="container">
     <section class="about-us">
